# MultiAgent_Terminology_Validation_System

./: .env.example  .gitignore  .gitignore_additions  AUTODESK_TERMINOLOGY_VALIDATION_PATENT.md  Agentic_Terminology_Validation_Analysis.html  CHANGELOG.md  CLEANUP_UNNECESSARY_FILES.md  COMPREHENSIVE_README.md  Cleaned_Summary_Terms_Data.json  DICTIONARY_SPLIT_FILES_REMOVED.md  Dictionary_Terms_Found.json  FOLDER_REORGANIZATION_COMPLETE.md  GLOSSARY_ANALYSIS_FIX_SUMMARY.md  GLOSSARY_FIX_APPLIED.md  GLOSSARY_VS_PATTERN_ANALYSIS.md  Glossary_Error_Analysis_Report.md  IMPLEMENTATION_SUMMARY.md  INDENTATION_REFERENCE_GUIDE.md  ISSUE_ANALYSIS_REPORT.md  OPTIMIZATION_STRATEGIES.md  OPTIMIZED_RUNNER_GUIDE.md  OPTION_E_STRICTER_THRESHOLDS_APPLIED.md  PATENT_SUBMISSION_SUMMARY.md  README.md  README_terminology_agent.md  REORGANIZATION_CHANGES_LOG.md  SAMPLE_INPUT_OUTPUT_DOCUMENTATION.md  STEP2_AUTH_FAILURE_ANALYSIS.md  STEP2_EXPLANATION.md  STEP9_COMPLETE_CSV_WORKFLOW.md  STEP9_CSV_FORMAT_UPDATE.md  STEP9_EXECUTION_COMPLETE.md  SYSTEM_STATUS_AND_CLEANUP_GUIDE.md  SYSTEM_TEST_COMPLETE_SUCCESS.md  TECHNICAL_DOCUMENTATION.md  TERMINOLOGY_REVIEW_README.md  ULTRA_IMPLEMENTATION_SUMMARY.md  ULTRA_OPTIMIZATION_GUIDE.md  USAGE_GUIDE.md  adaptive_system_config.py  (+89 more)
Create SVG Diagram/: README.md
glossary/: .gitignore  README.md  example_glossary_en_de.csv  pyproject.toml  sample.csv
glossary/code/: check.py  logger_config.py
glossary/data/: DNT.csv
glossary/data/general/: DNT.csv
glossary/data/ui-element/: README.md  sample.csv
glossary/data/ui-element/acc/: acc-nor.csv  index.csv
(+329 files in other folders)
